<resources>

    <string name="app_name">Skydive Kompasroos</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_calculate">Skydive kompasroos</string>
    <string name="title_activity_about">Over Skydive kompasroos</string>
    <string name="title_activity_canopylist">Skydive kompasroos parachutes</string>
    <string name="title_activity_canopydetails">Skydive kompasroos parachute gegevens</string>
    <string name="to_be_replaced">to_be_replaced</string>
    <string name="categorySetting">\nJe valt in categorie <b>%1$d</b></string>
    <string name="categorySettingDescription">(%1$s)</string>
    <string name="canopyAdviseOne">\nGeschikte parachutes:\nCategorie %1$d van minimaal %2$d sqft\n</string>
    <string name="canopyAdvise">\nGeschikte parachutes:\nCategorie 1 tot en met %1$d van minimaal %2$d sqft\n</string>
    <string name="canopyAdviseAny">\nGeschikte parachutes:\nCategorie 1 tot en met 6 zonder oppervlaktebeperking\n</string>
    <string name="ormore">" (of meer)"</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_save">Opslaan</string>
    <string name="menu_about">Over de Skydive kompasroos App</string>
    <string name="menu_sortbyname">Op naam</string>
    <string name="menu_sortbymanufacturer">Op fabrikant</string>
    <string name="menu_sortbycategory">Op categorie</string>
    <string name="btnShowCanopyList">Toon geschikte parachutes</string>
    <string name="canopyListHeader">\nCategorie %1$d</string>
    <string name="canopyListHeaderOk">Geschikt, mits minimaal %1$d sqft</string>
    <string name="canopyListHeaderNotOk">Niet geschikt</string>
    <string name="btnMin">" - "</string>
    <string name="btnPlus">" + "</string>
    <string name="btnShareResult">Deel resultaat</string>
    <string name="btnShareDetails">Deel koepelgegevens</string>
    <string name="calculationWeightLabel">\nExitgewicht</string>
    <string name="calculationWeightSetting">: %1$d kg (%2$d lbs)</string>
    <string name="calculationTotalJumpsLabel">\nTotaal aantal sprongen</string>
    <string name="calculationTotalJumpsSetting">: %1$d%2$s</string>
    <string name="calculationJumpsLast12MonthsLabel">\nSprongen in laatste 12 maanden</string>
    <string name="calculationJumpsLast12MonthsSetting">: %1$d%2$s</string>
    <string name="calculationIntrotext">Stel hieronder de juiste sprongaantallen en je exitgewicht in, om te bepalen welke parachutes geschikt zijn: de knop onderaan toont de lijst.</string>
    <string name="calculationOvertimeWarning">\nLet op: deze applicatie is meer dan 1 jaar oud en mogelijk niet meer up to date!</string>
    <string name="calculationOvertimeUnknownWarning">\nHuidige datum of datum van deze app kon niet bepaald worden. Gegevens zijn mogelijk niet meer up to date!</string>
    <string name="calculationCanopyCategoryLabel">Toegestane parachutes:</string>
    <string name="calculationCanopyMinAreaLabel">Minimale oppervlakte:</string>
    <string name="calculationMaxWingLoadLabel">Maximale wingload:</string>
    <string name="calculationCanopyCategoryOne">categorie 1</string>
    <string name="calculationCanopyCategoryMultiple">categorie 1 tot en met %1$d</string>
    <string name="calculationCanopyCategoryAll">categorie 1 tot en met 6 (alle)</string>
    <string name="calculationCanopyMinArea">%1$d sqft</string>
    <string name="calculationCanopyMinAreaAny">geen beperking</string>
    <string name="calculationCanopyMaxWingLoad">%1$.1f lbs/sqft</string>
    <string name="calculationCanopyMaxWingLoadAny">geen beperking</string>
    <string name="canopyType">type</string>
    <string name="canopyManufacturer">fabrikant</string>
    <string name="wingloadtableheader">\nWingload in lbs/sqft</string>
    <string name="sharedetailssubject">Skydive kompasroos parachute gegevens</string>
    <string name="shareresultsubject">Skydive kompasroos resultaat</string>
    <string name="shareresultheaderformat">Je ervaring (%1$d sprongen, waarvan %2$d in de laatste 12 maanden) en gewicht (%3$d kg) maken dat je mag springen met parachutes uit categorie %4$d met een oppervlakte van minimaal %5$d sqft.\n\n\nHieronder de lijst:\n\n</string>
    <string name="shareresultneededsizenotavailable">Onderstaande parachuts zouden geschikt zijn, maar zijn niet leverbaar in de vereiste oppervlakte:</string>
    <string name="shareresultnotaccepted">Onderstaande parachutes zijn NIET geschikt, ze vereisen meer ervaring:</string>
    <string name="shareresultfooter">\n\n\nSamengesteld door Skydive Kompasroos Android app van Digitalica</string>
    <string name="reset_name_own">Jezelf</string>
    <string name="reset_name_friend">Een vriend</string>
    <string name="reset_name_beginner">Een beginner</string>
    <string name="reset_name_intermediate">Gemiddelde springer</string>
    <string name="reset_name_skygod">Sky God</string>
    <string name="detailsmanufacturer">Fabrikant:</string>
    <string name="detailsmanufacturercountry">Uit:</string>
    <string name="detailsUrl">Website:</string>
    <string name="detailsCategory">Categorie:</string>
    <string name="detailsRemarks">Bijzonderheden:</string>
    <string name="detailsCells">Cellen:</string>
    <string name="detailsSizes">Maten beschikbaar:</string>
    <string name="detailsExperience">Benodigde ervaring:</string>
    <string name="detailsProduction">In productie:</string>
    <string name="detailsAdditionalInformationWelcome">Aanvullingen op bovenstaande gegevens zijn welkom, zie about pagina voor contactgegevens.</string>
    <string name="saveDialogHeader">Sla gegevens op als:</string>
    <string name="resetDialogHeader">Reset naar instellingen van:</string>

    <string-array name="canopyCategories">
        <item>Unknown</item>
        <item>wingload maximaal 1,1; oppervlakte minimaal 170 sqft</item>
        <item>wingload maximaal 1,1; oppervlakte minimaal 170 sqft</item>
        <item>wingload maximaal 1,3; oppervlakte minimaal 150 sqft</item>
        <item>wingload maximaal 1,5; oppervlakte minimaal 135 sqft</item>
        <item>wingload maximaal 1,7; oppervlakte minimaal 120 sqft</item>
        <item>geen limiten</item>
    </string-array>
    <string-array name="jumperCategories">
        <item>Unknown</item>
        <item>Minder dan 25 sprongen of minder dan 10 sprongen in laatste 12 maanden</item>
        <item>25 tot 100 sprongen; minstens 10 sprongen in de afgelopen 12 maanden</item>
        <item>100 tot 400 sprongen; minstens 25 sprongen in de afgelopen 12 maanden</item>
        <item>400 tot 700 sprongen; minstens 50 sprongen in de afgelopen 12 maanden</item>
        <item>700 tot 1000 sprongen; minstens 75 sprongen in de afgelopen 12 maanden</item>
        <item>meer dan 1000 sprongen; minstens 100 sprongen in de afgelopen 12 maanden met een sport main canopy</item>
    </string-array>
    <!--
         below is the same array as jumperCategories, but worded differently to use in 
         canopy details screen.
    -->
    <string-array name="neededExperience">
        <item>Unknown</item>
        <item>Geen</item>
        <item>Minimaal 25 sprongen, waarvan minimaal 10 in de de laatste 12 maanden</item>
        <item>Minimaal 100 sprongen, waarvan minimaal 25 in de afgelopen 12 maanden</item>
        <item>Minimaal 400 sprongen, waarvan minimaal 50 in de afgelopen 12 maanden</item>
        <item>Minimaal 700 sprongen, waarvan minimaal 75 in de afgelopen 12 maanden</item>
        <item>Minimaal 1000 sprongen, waarvan minmaal 100 in de afgelopen 12 maanden met een sport main canopy</item>
    </string-array>

</resources>